IAX2 trunk packets display misleading call information
This issue was migrated from bug 6818 in our old bug tracker.
Original bug information:
Reporter: Sean Bright
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: Windows 7
Platform: x86
Version: Git
Attachments:
iax2-trunk-calls.patch: patch to correct trunk frame output
iax2-dump-1328753517.pcap: Capture that demonstrates the issue
iax2-ep-fix.patch: Updated patch to address review comments
iax2-call-count.diff: Updated patch to correct list handling