From Sean Bright: IAX2 trunk packets display misleading call information.

https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=6818

svn path=/trunk/; revision=41220